# google_calendar_mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
app/: __init__.py  auth.py  cache.py  main.py  middleware.py  models.py  resources.py  settings.py  tools.py  utils.py
